# pico-drafts

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/blink/: CMakeLists.txt
src/blink/src/: blink.c
src/usb_uart/: CMakeLists.txt
src/usb_uart/src/: usb_uart.c
